[package]
name = "sqlite-cli"
version = "0.1.0"
edition = "2021"
publish = false
description = "Command-mode SQLite CLI for wasm32-wasip2. Exports wasi:cli/run; any wasi:p2 host can drive it."

[lib]
crate-type = ["cdylib"]

# The cli's TVM-track deps unconditionally use wit-bindgen-backed
# `tvm:memory` regions on wasm32  the cli component therefore
# always imports tvm:memory/{types,manager,bytes,diagnostics}.
# Every host running the cli MUST wire tvm-wasmtime's
# add_to_linker (our reference sqlite-wasm-host does so by
# default).

[dependencies]
# wit-bindgen-rt provides the runtime support functions the
# generate! macro emits calls to. Sync bindings — no `async`
# feature needed now that the live-SPI bridge is gone.
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
# Bindings are produced inline in src/lib.rs via wit_bindgen::generate!.
wit-bindgen = { version = "0.44", features = ["macros"] }
# PLAN-cli-stages-5-6.md Stage 5f: every SQL call now routes
# through `bindings::sqlite::extension::spi::*` against the
# host's shared connection. The cli no longer needs an in-wasm
# sqlite3 of its own  libsqlite3-sys + sqlite-wasm-core +
# sqlite-pcache-tvm / sqlite-mem-tvm / sqlite-vfs-tvm are all
# dropped. is_statement_complete is a Rust-side approximation
# (see lib.rs).
# .sha3sum uses SHA3-256 over a canonical encoding of every row
# of every table. Pure Rust impl works on wasm32-wasip2 unchanged.
sha3 = { version = "0.10", default-features = false }
# .archive (SQLAR) uses zlib deflate/inflate for entries that
# shrink when compressed. miniz_oxide is pure-Rust, no_std-friendly,
# no external C dependency — clean wasm32-wasip2 build.
miniz_oxide = { version = "0.8", default-features = false, features = ["with-alloc"] }
# Persistent capability grants (PLAN-grants-db.md G3): integrity-
# pinning by blake3 digest of the extension bytes. Pure-Rust,
# wasm32-wasip2 clean.
blake3 = { version = "1", default-features = false }
# Embedded extensions  optional; off by default. When an `embed-*`
# feature is on, the cli depends on the extension's rlib crate
# (not the wasi component) and calls its `embed::register_into(db)`
# at startup. Same scalar surface; no WIT boundary on the hot path.
# Add a new embed-* feature alongside its dep when adopting more
# extensions. See PLAN-embed-extensions.md for the contract.
# sqlite-embed dropped along with libsqlite3-sys in Stage 5f
# the cli no longer instantiates `<crate>::embed::register_into(db)`
# on its own connection (the host owns the only sqlite3 instance
# the cli ever talks to, and registers its embed-* extensions
# there itself).
sha3-extension  = { path = "../extensions/sha3",  optional = true, features = ["embed"], default-features = false }
uuid-extension  = { path = "../extensions/uuid",  optional = true, features = ["embed"], default-features = false }
crc-extension   = { path = "../extensions/crc",   optional = true, features = ["embed"], default-features = false }
baseN-extension = { path = "../extensions/baseN", optional = true, features = ["embed"], default-features = false }
color-extension = { path = "../extensions/color", optional = true, features = ["embed"], default-features = false }
ean-extension     = { path = "../extensions/ean",     optional = true, features = ["embed"], default-features = false }
emoji-extension   = { path = "../extensions/emoji",   optional = true, features = ["embed"], default-features = false }
morse-extension   = { path = "../extensions/morse",   optional = true, features = ["embed"], default-features = false }
hexdump-extension   = { path = "../extensions/hexdump",   optional = true, features = ["embed"], default-features = false }
idna-extension      = { path = "../extensions/idna",      optional = true, features = ["embed"], default-features = false }
faker-extension     = { path = "../extensions/faker",     optional = true, features = ["embed"], default-features = false }
regexp-extension    = { path = "../extensions/regexp",    optional = true, features = ["embed"], default-features = false }
sentiment-extension = { path = "../extensions/sentiment", optional = true, features = ["embed"], default-features = false }
json1-extension     = { path = "../extensions/json1",     optional = true, features = ["embed"], default-features = false }
cron-extension      = { path = "../extensions/cron",      optional = true, features = ["embed"], default-features = false }
crypto-extension    = { path = "../extensions/crypto",    optional = true, features = ["embed"], default-features = false }
mailto-extension    = { path = "../extensions/mailto",    optional = true, features = ["embed"], default-features = false }
ssn-extension       = { path = "../extensions/ssn",       optional = true, features = ["embed"], default-features = false }
numfmt-extension    = { path = "../extensions/numfmt",    optional = true, features = ["embed"], default-features = false }
ipaddr-extension    = { path = "../extensions/ipaddr",    optional = true, features = ["embed"], default-features = false }
aba-extension        = { path = "../extensions/aba",        optional = true, features = ["embed"], default-features = false }
bic-extension        = { path = "../extensions/bic",        optional = true, features = ["embed"], default-features = false }
cusip-extension      = { path = "../extensions/cusip",      optional = true, features = ["embed"], default-features = false }
creditcard-extension = { path = "../extensions/creditcard", optional = true, features = ["embed"], default-features = false }
isin-extension       = { path = "../extensions/isin",       optional = true, features = ["embed"], default-features = false }
dns-extension        = { path = "../extensions/dns",        optional = true, features = ["embed"], default-features = false }
detect-extension     = { path = "../extensions/detect",     optional = true, features = ["embed"], default-features = false }
ical-extension       = { path = "../extensions/ical",       optional = true, features = ["embed"], default-features = false }
zorder-extension     = { path = "../extensions/zorder",     optional = true, features = ["embed"], default-features = false }
postcode-extension   = { path = "../extensions/postcode",   optional = true, features = ["embed"], default-features = false }
totype-extension     = { path = "../extensions/totype",     optional = true, features = ["embed"], default-features = false }
template-extension   = { path = "../extensions/template",   optional = true, features = ["embed"], default-features = false }
email-extension      = { path = "../extensions/email",      optional = true, features = ["embed"], default-features = false }
case-extension       = { path = "../extensions/case",       optional = true, features = ["embed"], default-features = false }
phone-extension      = { path = "../extensions/phone",      optional = true, features = ["embed"], default-features = false }
csscolor-extension   = { path = "../extensions/csscolor",   optional = true, features = ["embed"], default-features = false }
lorem-extension      = { path = "../extensions/lorem",      optional = true, features = ["embed"], default-features = false }
url-extension        = { path = "../extensions/url",        optional = true, features = ["embed"], default-features = false }
graphql-extension    = { path = "../extensions/graphql",    optional = true, features = ["embed"], default-features = false }
eval-extension       = { path = "../extensions/eval",       optional = true, features = ["embed"], default-features = false }
roman-extension      = { path = "../extensions/roman",      optional = true, features = ["embed"], default-features = false }
mac-extension        = { path = "../extensions/mac",        optional = true, features = ["embed"], default-features = false }
fileio-extension       = { path = "../extensions/fileio",       optional = true, features = ["embed"], default-features = false }
bpe-extension          = { path = "../extensions/bpe",          optional = true, features = ["embed"], default-features = false }
geo-distance-extension = { path = "../extensions/geo-distance", optional = true, features = ["embed"], default-features = false }
http-extension         = { path = "../extensions/http",         optional = true, features = ["embed"], default-features = false }
bencode-extension      = { path = "../extensions/bencode",      optional = true, features = ["embed"], default-features = false }
sqlparse-extension     = { path = "../extensions/sqlparse",     optional = true, features = ["embed"], default-features = false }
semver-extension       = { path = "../extensions/semver",       optional = true, features = ["embed"], default-features = false }
container-extension    = { path = "../extensions/container",    optional = true, features = ["embed"], default-features = false }
currency-extension     = { path = "../extensions/currency",     optional = true, features = ["embed"], default-features = false }
codecs-extension       = { path = "../extensions/codecs",       optional = true, features = ["embed"], default-features = false }
radix-extension       = { path = "../extensions/radix",     optional = true, features = ["embed"], default-features = false }
natsort-extension     = { path = "../extensions/natsort",   optional = true, features = ["embed"], default-features = false }
unitconv-extension    = { path = "../extensions/unitconv",  optional = true, features = ["embed"], default-features = false }
latlon-extension      = { path = "../extensions/latlon",    optional = true, features = ["embed"], default-features = false }
vin-extension         = { path = "../extensions/vin",       optional = true, features = ["embed"], default-features = false }
ieee754-extension     = { path = "../extensions/ieee754",   optional = true, features = ["embed"], default-features = false }
escape-extension      = { path = "../extensions/escape",    optional = true, features = ["embed"], default-features = false }
iban-extension        = { path = "../extensions/iban",      optional = true, features = ["embed"], default-features = false }
humansize-extension   = { path = "../extensions/humansize", optional = true, features = ["embed"], default-features = false }
math-extension        = { path = "../extensions/math",      optional = true, features = ["embed"], default-features = false }
compress-extension    = { path = "../extensions/compress",  optional = true, features = ["embed"], default-features = false }
bloom-extension       = { path = "../extensions/bloom",     optional = true, features = ["embed"], default-features = false }
setops-extension      = { path = "../extensions/setops",    optional = true, features = ["embed"], default-features = false }
db-utils-extension    = { path = "../extensions/db-utils",  optional = true, features = ["embed"], default-features = false }
"phone-prefix-extension" = { path = "../extensions/phone-prefix", optional = true, features = ["embed"], default-features = false }
country-extension     = { path = "../extensions/country",   optional = true, features = ["embed"], default-features = false }
# ids: needs wasi_snapshot_preview1 adapter (ulid/nanoid pull in
# std::time). embed.rs ships; can re-add when wasm-tools compose
# learns to plumb the adapter through the compose subcommand.
# ids-extension         = { path = "../extensions/ids",       optional = true, features = ["embed"], default-features = false }
onnx-extension        = { path = "../extensions/onnx",      optional = true, features = ["embed"], default-features = false }
"text-nlp-extension"  = { path = "../extensions/text-nlp",  optional = true, features = ["embed"], default-features = false }
# avro: rust-lld SIGSEGV (heavy apache_avro/num_bigint/libflate graph). embed.rs ships.
# avro-extension        = { path = "../extensions/avro",      optional = true, features = ["embed"], default-features = false }
formats-extension     = { path = "../extensions/formats",   optional = true, features = ["embed"], default-features = false }
"web-parsers-extension" = { path = "../extensions/web-parsers", optional = true, features = ["embed"], default-features = false }
# crypto-keys: needs wasi_snapshot_preview1 adapter (random_get for keygen). embed.rs ships.
# "crypto-keys-extension" = { path = "../extensions/crypto-keys", optional = true, features = ["embed"], default-features = false }
extfns-extension      = { path = "../extensions/extfns",    optional = true, features = ["embed"], default-features = false }
vec-extension         = { path = "../extensions/vec",       optional = true, features = ["embed"], default-features = false }
time-extension        = { path = "../extensions/time",      optional = true, features = ["embed"], default-features = false }
parsers-extension     = { path = "../extensions/parsers",   optional = true, features = ["embed"], default-features = false }
# crypto-auth: needs wasi_snapshot_preview1 adapter (random_get for salts). embed.rs ships.
# "crypto-auth-extension" = { path = "../extensions/crypto-auth", optional = true, features = ["embed"], default-features = false }
geo-extension         = { path = "../extensions/geo",       optional = true, features = ["embed"], default-features = false }
decimal-extension     = { path = "../extensions/decimal",   optional = true, features = ["embed"], default-features = false }
hyperloglog-extension = { path = "../extensions/hyperloglog", optional = true, features = ["embed"], default-features = false }
count-min-extension   = { path = "../extensions/count_min", optional = true, features = ["embed"], default-features = false }
sketches-extension    = { path = "../extensions/sketches",  optional = true, features = ["embed"], default-features = false }
series-extension      = { path = "../extensions/series",    optional = true, features = ["embed"], default-features = false }
listargs-extension    = { path = "../extensions/listargs",  optional = true, features = ["embed"], default-features = false }
define-extension      = { path = "../extensions/define",    optional = true, features = ["embed"], default-features = false }
completion-extension  = { path = "../extensions/completion", optional = true, features = ["embed"], default-features = false }
vec-each-extension    = { path = "../extensions/vec_each",  optional = true, features = ["embed"], default-features = false }
text-utils-extension  = { path = "../extensions/text-utils",optional = true, features = ["embed"], default-features = false }
time-series-extension = { path = "../extensions/time-series",optional = true, features = ["embed"], default-features = false }
trie-extension        = { path = "../extensions/trie",      optional = true, features = ["embed"], default-features = false }
pmtiles-extension     = { path = "../extensions/pmtiles",   optional = true, features = ["embed"], default-features = false }
inmem-extension       = { path = "../extensions/inmem",     optional = true, features = ["embed"], default-features = false }
changeset-extension   = { path = "../extensions/changeset", optional = true, features = ["embed"], default-features = false }
csv-extension         = { path = "../extensions/csv",       optional = true, features = ["embed"], default-features = false }
stats-extension       = { path = "../extensions/stats",     optional = true, features = ["embed"], default-features = false }
vec0-extension        = { path = "../extensions/vec0",      optional = true, features = ["embed"], default-features = false }
stdsql-extension      = { path = "../extensions/stdsql",    optional = true, features = ["embed"], default-features = false }
"sys-compat-extension" = { path = "../extensions/sys-compat", optional = true, features = ["embed"], default-features = false }
list-extension        = { path = "../extensions/list",      optional = true, features = ["embed"], default-features = false }

[features]
# Family-of-features layout: each embeddable extension gets its own
# feature flag so users can compose exactly what they want. Default
# build has NONE of them on  identical to the pre-embed cli.
embed-sha3      = ["dep:sha3-extension"]
embed-uuid      = ["dep:uuid-extension"]
embed-crc       = ["dep:crc-extension"]
embed-baseN     = ["dep:baseN-extension"]
embed-color     = ["dep:color-extension"]
embed-ean       = ["dep:ean-extension"]
embed-emoji     = ["dep:emoji-extension"]
embed-morse     = ["dep:morse-extension"]
embed-hexdump   = ["dep:hexdump-extension"]
embed-idna      = ["dep:idna-extension"]
embed-faker     = ["dep:faker-extension"]
embed-regexp    = ["dep:regexp-extension"]
embed-sentiment = ["dep:sentiment-extension"]
embed-json1     = ["dep:json1-extension"]
embed-cron      = ["dep:cron-extension"]
embed-crypto    = ["dep:crypto-extension"]
embed-mailto    = ["dep:mailto-extension"]
embed-ssn       = ["dep:ssn-extension"]
embed-numfmt    = ["dep:numfmt-extension"]
embed-ipaddr    = ["dep:ipaddr-extension"]
embed-aba        = ["dep:aba-extension"]
embed-bic        = ["dep:bic-extension"]
embed-cusip      = ["dep:cusip-extension"]
embed-creditcard = ["dep:creditcard-extension"]
embed-isin       = ["dep:isin-extension"]
embed-dns        = ["dep:dns-extension"]
embed-detect     = ["dep:detect-extension"]
embed-ical       = ["dep:ical-extension"]
embed-zorder     = ["dep:zorder-extension"]
embed-postcode   = ["dep:postcode-extension"]
embed-totype     = ["dep:totype-extension"]
embed-template   = ["dep:template-extension"]
embed-email      = ["dep:email-extension"]
embed-case       = ["dep:case-extension"]
embed-phone      = ["dep:phone-extension"]
embed-csscolor   = ["dep:csscolor-extension"]
embed-lorem      = ["dep:lorem-extension"]
embed-url        = ["dep:url-extension"]
embed-graphql    = ["dep:graphql-extension"]
embed-eval       = ["dep:eval-extension"]
embed-roman      = ["dep:roman-extension"]
embed-mac        = ["dep:mac-extension"]
embed-fileio       = ["dep:fileio-extension"]
embed-bpe          = ["dep:bpe-extension"]
"embed-geo-distance" = ["dep:geo-distance-extension"]
embed-http         = ["dep:http-extension"]
embed-bencode      = ["dep:bencode-extension"]
embed-sqlparse     = ["dep:sqlparse-extension"]
embed-semver       = ["dep:semver-extension"]
embed-container    = ["dep:container-extension"]
embed-currency     = ["dep:currency-extension"]
embed-codecs       = ["dep:codecs-extension"]
embed-radix      = ["dep:radix-extension"]
embed-natsort    = ["dep:natsort-extension"]
embed-unitconv   = ["dep:unitconv-extension"]
embed-latlon     = ["dep:latlon-extension"]
embed-vin        = ["dep:vin-extension"]
embed-ieee754    = ["dep:ieee754-extension"]
embed-escape     = ["dep:escape-extension"]
embed-iban       = ["dep:iban-extension"]
embed-humansize  = ["dep:humansize-extension"]
embed-math       = ["dep:math-extension"]
embed-compress   = ["dep:compress-extension"]
embed-bloom      = ["dep:bloom-extension"]
embed-setops     = ["dep:setops-extension"]
"embed-db-utils" = ["dep:db-utils-extension"]
"embed-phone-prefix" = ["dep:phone-prefix-extension"]
embed-country    = ["dep:country-extension"]
# embed-ids        = ["dep:ids-extension"]  # wasi p1 adapter required
embed-onnx       = ["dep:onnx-extension"]
"embed-text-nlp" = ["dep:text-nlp-extension"]
# embed-avro       = ["dep:avro-extension"]  # rust-lld SIGSEGV
embed-formats    = ["dep:formats-extension"]
"embed-web-parsers" = ["dep:web-parsers-extension"]
# "embed-crypto-keys" = ["dep:crypto-keys-extension"]  # wasi p1 adapter required
embed-extfns     = ["dep:extfns-extension"]
embed-vec        = ["dep:vec-extension"]
embed-time       = ["dep:time-extension"]
embed-parsers    = ["dep:parsers-extension"]
# "embed-crypto-auth" = ["dep:crypto-auth-extension"]  # wasi p1 adapter required
embed-geo        = ["dep:geo-extension"]
embed-decimal    = ["dep:decimal-extension"]
embed-hyperloglog = ["dep:hyperloglog-extension"]
embed-count-min   = ["dep:count-min-extension"]
embed-sketches   = ["dep:sketches-extension"]
embed-series     = ["dep:series-extension"]
embed-listargs   = ["dep:listargs-extension"]
embed-define     = ["dep:define-extension"]
embed-completion = ["dep:completion-extension"]
"embed-vec-each" = ["dep:vec-each-extension"]
"embed-text-utils" = ["dep:text-utils-extension"]
"embed-time-series" = ["dep:time-series-extension"]
embed-trie       = ["dep:trie-extension"]
embed-pmtiles    = ["dep:pmtiles-extension"]
embed-inmem      = ["dep:inmem-extension"]
embed-changeset  = ["dep:changeset-extension"]
embed-csv        = ["dep:csv-extension"]
embed-stats      = ["dep:stats-extension"]
embed-vec0       = ["dep:vec0-extension"]
embed-stdsql     = ["dep:stdsql-extension"]
"embed-sys-compat" = ["dep:sys-compat-extension"]
embed-list       = ["dep:list-extension"]

# Component packaging: after `cargo build --release --target
# wasm32-wasip2`, run
#   wasm-tools component new \
#     target/wasm32-wasip2/release/sqlite_cli.wasm \
#     -o target/wasm32-wasip2/release/sqlite_cli.component.wasm
# No adapter needed — wasm32-wasip2 IS the component-model target.
# The wasm-tools wrap is purely to add the component-section header
# (the rustc output is a core module that uses wasip2 imports).
