[package]
name = "sqlite-wasm-host"
version = "0.1.0"
edition = "2021"
description = "Reference wasmtime-based host for SQLite-in-WebAssembly components. Implements sqlite:wasm/extension-loader using the unified sqlite:extension contract."
license = "MIT"

[[bin]]
name = "sqlink"
path = "src/main.rs"

[lib]
name = "sqlite_wasm_host"
path = "src/lib.rs"

[dependencies]
# Canonical Policy / Capability / HttpPolicy / PolicyError types,
# shared with sqlite-wasm-loader/runtimes/{wasmtime,wamr}.
sqlite-extension-policy = { path = "../sqlite-loader-wit" }

anyhow = "1.0"
wasmtime = { version = "45.0.1", features = [
    "component-model",
    "component-model-async",
    "cranelift",
    "parallel-compilation",
    "async",
    # On-disk compilation cache. Wasmtime hashes each module + the
    # compiler config and stores the compiled artifact under the
    # configured directory; subsequent `Engine::precompile_component`
    # / `Component::new` calls hit the cache. See Host::new for the
    # directory wiring (env `SQLITE_WASM_COMPILE_CACHE` or default
    # `~/.cache/sqlite-wasm/compile-cache`).
    "cache",
] }
wasmtime-wasi = "45.0.1"
parking_lot = "0.12"
tracing = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
async-trait = "0.1"
# Real http impl for the http-resolver component path. blocking to
# stay sync within the (currently sync) Host trait method body —
# the parent async call already yielded, so blocking briefly here
# is OK for v1; future revision uses async reqwest with proper
# cooperative scheduling.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
# Async DNS resolver used by the host's `dns::resolve` impl for
# `Capability::Dns`-granted extensions. Same async story as reqwest;
# the Host trait method is already async, so we just `.await` it.
hickory-resolver = { version = "0.24", default-features = false, features = ["tokio-runtime", "system-config"] }
# Host-side SQLite for the hybrid SPI path + sqlite-runtime
# compose provider. Same sqlite3.c the wasm crates use — we drive
# it through `core::db` (in-tree libsqlite3-sys wrapper) so the
# host and the wasm components share one SQLite story end to end.
# Used to be `rusqlite`; dropped because (a) the host had two
# SQLite stacks and (b) every type swap was paid twice.
sqlite-wasm-core = { path = "../core" }
# Direct dep so the sqlite-wasm-run binary can call the
# session/changeset FFI for its `changeset` subcommand. The
# bundled sqlite3 is compiled with SESSION via LIBSQLITE3_FLAGS
# (.cargo/config.toml); we declare sqlite3session_* / sqlite3changeset_*
# as extern "C" manually because the libsqlite3-sys `session`
# feature forces buildtime_bindgen which fails on wasm32-wasip2
# cross-compile.
libsqlite3-sys = { version = "0.38", default-features = false }
# SQLite-backed content-addressed cache for resolved extension
# components. The host's `cache` module is a thin wrapper.
sqlite-cas-cache = { path = "../sqlite-cas-cache" }
# Hash primitive  shared with sqlite-cas-cache so hex decoders
# in this crate don't need to round-trip through the store.
blake3 = "1.5"
tempfile = "3.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# CBOR codec for the sqlite-runtime compose provider — see
# host/COMPOSE-PROTOCOL.md for the wire shape.
ciborium = "0.2"
# TVM-track host wiring  every component the host runs (the cli
# and any runnable composed against sqlite-lib) unconditionally
# imports tvm:memory now (the sqlite-pcache-tvm + sqlite-vfs-tvm
# crates always use the wit-bindgen-backed cold tiers on wasm32).
# The host's make_run_linker + the main.rs cli runner both wire
# tvm_wasmtime::add_to_linker so those imports resolve. Path dep
# against the sibling tvm-wasm checkout.
tvm-wasmtime = { path = "../../tvm-wasm/crates/tvm-wasmtime" }

# PLAN-cli-stages-5-6.md Stage 5c: embedded SQL function extensions
# moved from cli/Cargo.toml. Each is an optional dep + a feature
# flag; the host's register_embedded_extensions wires whichever
# are enabled at compile time. Starting with the most common ones
# (sha3, uuid, regexp, json1) as proof of concept; the remaining
# 85 follow in subsequent commits.
sha3-extension   = { path = "../extensions/sha3",   optional = true, features = ["embed"], default-features = false }
uuid-extension   = { path = "../extensions/uuid",   optional = true, features = ["embed"], default-features = false }
regexp-extension = { path = "../extensions/regexp", optional = true, features = ["embed"], default-features = false }
json1-extension  = { path = "../extensions/json1",  optional = true, features = ["embed"], default-features = false }

[features]
embed-sha3   = ["dep:sha3-extension"]
embed-uuid   = ["dep:uuid-extension"]
embed-regexp = ["dep:regexp-extension"]
embed-json1  = ["dep:json1-extension"]
# Convenience: all-embed pulls in the lot once we've ported them.
all-embed = [
    "embed-sha3",
    "embed-uuid",
    "embed-regexp",
    "embed-json1",
]

[dev-dependencies]
# Used by tests to generate Ed25519 keypairs and sign artifacts so
# the host's OpenSslVerifier path can be exercised end-to-end.
# Not pulled in for the host's production crypto path  the runtime
# verifier uses openssl-wasm, this is just for fixture generation.
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
